--- a/src/app/components/produtos-page/produtos-page.component.html
+++ b/src/app/components/produtos-page/produtos-page.component.html
@@ -29,13 +29,13 @@
     </thead>
     <tbody>
       <tr *ngFor="let item of listaDeProdutos">
-        <td> {{item.id}}</td>
+      <td> {{item.id}}</td>
       <td> {{item.nome}}</td>
       <td> {{item.quantidade}}</td>
       <td> {{item.valor}}</td>
       <td>
-        <button type="button" class="btn btn-primary">Primary</button> &nbsp;
-        <button type="button" class="btn btn-danger">Danger</button>
+        <button type="button" class="btn btn-primary">Editar</button> &nbsp;
+        <button type="button" class="btn btn-danger" (click)="deleteProduto(item)">Excluir</button>
      </td>
       </tr>
 
@@ -48,9 +48,7 @@
   <div class="modal-header">
     <h4 class="modal-title" id="modal-basic-title">Formulário de Novo Produto</h4>
   </div>
-  <div class="modal-footer">
-    <button type="button" class="btn btn-danger" (click)="modal.close('Save click')"> X </button>
-  </div>
+
 
   <div class="modal-body">
     <form [formGroup]="createProduto"  (ngSubmit)="postCreateProduto()" >
@@ -77,7 +75,7 @@
   </div>
 
   <div class="modal-footer">
-    <button type="button" class="btn btn-danger" (click)="modal.close('Save click')"> X </button>
+    <button type="button" class="btn btn-danger" (click)="modal.close('Save click')"> Fechar </button>
   </div>
 </ng-template>
 
