--- a/src/app/components/produtos-page/produtos-page.component.html
+++ b/src/app/components/produtos-page/produtos-page.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand">Produtos</a>
+    <a class="navbar-brand" href="#">PRODUTO</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -14,25 +14,49 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <button class="btn btn-info btn-sm" (click)="triggerModal(modalData)">
-          <span class="material-icons"> add_circle_outline </span> Cadastrar
-          Produto
-        </button>
+        <li class="nav-item">
+          <button class="btn btn-info btn-sm" (click)="triggerModal(modalData)">
+            <span class="material-icons"> add_circle_outline </span> Cadastrar
+            Produto
+          </button>
+        </li>
       </ul>
-      <form class="d-flex">
-        <input
-          class="form-control me-2"
-          type="search"
-          placeholder="Buscar"
-          aria-label="Search"
-        />
-        <button class="btn btn-outline-success" type="submit" >
-          <span class="material-icons">search</span>
-        </button>
-      </form>
+      <div class="collapse navbar-collapse" id="navbarNav"></div>
+        <ul class="navbar-nav">
+          <li class="nav-item"><span class="material-icons"> add_circle_outline </span>
+            <input
+              class="form-control me-2"
+              type="text"
+              placeholder="Buscar"
+              aria-label="Search"
+              [(ngModel)]="filterPost"
+              #dataSearch
+            />
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
 </nav>
+
+
+
+
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <input
+              class="form-control me-2"
+              type="text"
+              placeholder="Buscar"
+              aria-label="Search"
+              [(ngModel)]="filterPost"
+              #dataSearch
+            />
+          </li>
+        </ul>
+      </div>
+
+
 
 <div class="table-list">
   <table class="table">
@@ -46,26 +70,26 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let item of listaDeProdutos">
+      <tr *ngFor="let item of listaDeProdutos | filter: filterPost">
         <td>{{ item.id }}</td>
         <td>{{ item.nome }}</td>
         <td>{{ item.quantidade }}</td>
-        <td>{{ item.valor }}</td>
+        <td>{{ item.valor | currency: "BRL":"symbol" }}</td>
         <td>
           <button
             type="button"
             class="btn btn-outline-primary"
+            title="Editar"
             (click)="editarProduto(item, modalEditarProduto)"
           >
-            <mat-icon aria-hidden="false"
-              >edit</mat-icon
-            >
+            <mat-icon aria-hidden="false">edit</mat-icon>
           </button>
           &nbsp;
 
           <button
             type="button"
             class="btn btn-outline-danger"
+            title="Excluir"
             (click)="deleteProduto(item, modalDeletarProduto)"
           >
             <span class="material-icons">delete_forever</span>
