--- a/src/app/page/produtos-page/produtos-page.component.html
+++ b/src/app/page/produtos-page/produtos-page.component.html
@@ -23,7 +23,7 @@
       </ul>
       <div class="collapse navbar-collapse" id="navbarNav"></div>
         <ul class="navbar-nav">
-          <li class="nav-item"><span class="material-icons"> add_circle_outline </span>
+          <li class="nav-item">
             <input
               class="form-control me-2"
               type="text"
