--- a/src/app/page/produtos-page/produtos-page.component.html
+++ b/src/app/page/produtos-page/produtos-page.component.html
@@ -57,6 +57,8 @@
       </div>
 
 
+<div class="table-area">
+
 
 <div class="table-list">
   <table class="table">
@@ -99,6 +101,7 @@
       </tr>
     </tbody>
   </table>
+</div>
 </div>
 
 <!-- formulario para criar produto -->
